# TechJourney

./: .gitignore  AGENTS.md  README.md
DWMRI/: .gitignore  AGENTS.md  README.md  conda.yaml  list_to_yaml.awk  orientation encoding (P2S, MDS2S, MPPCA).txt  pyproject.toml  requirements.txt  setup.py
DWMRI/.cursor/plans/: 3d_restormer_review_9942697e.plan.md  fix_chessboard_artifacts_87e43a04.plan.md  (+1 more)
DWMRI/.ipynb_checkpoints/: conda_list-checkpoint.txt
DWMRI/experiments/: AGENTS.md  BASELINES_REGISTRY.md  PILOT_vs_PRODUCTION.md  Stanford CSD fixel.md  build_pilot_vs_paper_params.py  checklist_pruebas_paper.md  collect_paper_artifacts.py  driver.py  generate_k_sweep_jobs.py  generate_matrix_jobs.py  iso_budget_rules.yaml  manifest_dual_regime.yaml  manifest_inference_sweeps.yaml  manifest_pilot.yaml  merge_pilot_metrics.py  model_dim_matrix.yaml  paper_export_dbrain_volume_pair.py  paper_manifest_final.yaml  paper_manifest_gap_report.yaml  paper_manifest_smoke.yaml  paper_pilot.yaml  paper_protocol_final.yaml  probe_protocol_dependencies.py  protocol_closure_report.py  pruebas_faltantes_20260627.md  pruebas_faltantes_todos_20260628.md  pruebas_faltantes_todos_20260701.md  rerun_k16_base.sh  rerun_k16_restormer2d_ablation.sh  rerun_k16_restormer3d_large.sh  rerun_k16_stanford_fixel_arms.sh  smoke_baselines_protocol.py  validate_protocol_final.py
DWMRI/paper/: Sepulveda_dwmri_restormer.aux  Sepulveda_dwmri_restormer.fdb_latexmk  Sepulveda_dwmri_restormer.fls  Sepulveda_dwmri_restormer.out  Sepulveda_dwmri_restormer.tex  review-2026-07-02-033124.tex  review-2026-07-07-021507.tex  review-2026-07-08-014147.tex
DWMRI/src/: .gitignore  AGENTS.md  J_invariance_DWMRI_denoising_report.md  J_invariance_DWMRI_denoising_report_hybrid_rgs.md  README.md  Untitled.ipynb  plan_para_escribir_el_paper.md  report.md  requirements.txt  resultados_parciales_paper.md  run.py  runner.ipynb  runner.py  runner2.ipynb  runner_dbrain_p2s.py  runner_stanford.py  runner_stanford_mds2s.py  runner_stanford_p2s.py  runner_stanford_restormer_rgs.py  setup.py  tests.ipynb  visual_tests_drcnet.ipynb
DWMRI/src/drcnet/: data.py  (+6 more)
DWMRI/tests/: test_drcnet_objective_modes.py  test_experiment_runtime.py  test_export_denoised.py  test_training_patch_subset.py
DWMRI/tmp/: .gitignore
(+326 files in other folders)
