[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dwmri-processing"
version = "0.1.0"
description = "DWMRI processing tools including MDS2S, P2S, and DRCNet"
readme = "src/README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "your.email@example.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "numpy>=1.21.0,<3",
    # Resolved from PyTorch cu121 wheels (not PyPI default cu13) for driver 535 / CUDA 12.2 hosts.
    "torch>=2.5.0,<3",
    "PyYAML>=5.4.0",
    "munch>=2.5.0",
    "matplotlib>=3.3.0",
    "scikit-image>=0.18.0",
    "scikit-learn>=1.0.0",
    "einops>=0.8.0",
    "wandb>=0.16.0",
    "dipy>=1.8.0",
    "pandas>=1.3.0",
    "tqdm>=4.60.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "ruff>=0.8.0",
    "setuptools>=61",
]

[project.scripts]
mds2s = "mds2s.run:main"

[project.urls]
Repository = "https://github.com/yourusername/dwmri-processing"

[tool.setuptools.packages.find]
where = ["src"]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
# cu121 wheels are Linux/Windows only; macOS dev installs stay on PyPI (CPU/MPS).
torch = { index = "pytorch-cu121", marker = "sys_platform == 'linux'" }

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src", "experiments"]
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
# Flake8-like + import sorting; add "B", "UP" when you want stricter modernisation.
select = ["E", "W", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = [
    "drcnet_hybrid_rgs",
    "mds2s",
    "p2s",
    "restormer_hybrid_rgs",
    "paper_eval",
    "utils",
]
